--- a/WS/src/app/components/profile/profile.component.html
+++ b/WS/src/app/components/profile/profile.component.html
@@ -18,6 +18,11 @@
 
       </div>
       <div>
+          <label for="descripcion">Descripción: </label>
+          <input type="text" class="form-control" id="descripcion" [(ngModel)]="item.descripcion">
+
+        </div>
+      <div>
           <label for="edad">Edad: </label>
           <input type="text" class="form-control" id="edad" [(ngModel)]="item.edad">
 
