--- a/WS/src/app/components/crearservicio/crearservicio.component.html
+++ b/WS/src/app/components/crearservicio/crearservicio.component.html
@@ -51,7 +51,7 @@
 
     <div>
       <label for="tipo">Tipo de servicio</label>
-      <select (change)=cambiar() [(ngModel)]="this.tipo" name="combo" id="combo" ng-model="listItems"
+      <select (change)=cambiar() [(ngModel)]="this.tipoServicio" name="combo" id="combo" ng-model="listItems"
         formControlName="tipo" class="form-control">
         <option value="Alimentacion">Alimentación</option>
         <option value="Alojamiento">Alojamiento</option>
@@ -60,7 +60,7 @@
       </select>
     </div>
 
-    <div *ngIf="this.tipo == 'Alimentacion'">
+    <div *ngIf="this.tipoServicio == 'Alimentacion'">
       <div class="form-group">
         <label for="numeropersonas">Número de personas</label>
         <input type="text" formControlName="numeropersonas" class="form-control"
@@ -80,76 +80,79 @@
       </div>
     </div>
 
-    <div *ngIf="this.tipo == 'Alojamiento'">
+    <div *ngIf="this.tipoServicio == 'Alojamiento'">
         <div class="form-group">
             <label for="numeropersonas">Número de personas</label>
             <input type="number" formControlName="numeropersonas" class="form-control"
               [ngClass]="{ 'is-invalid': submitted && f.numeropersonas.errors }" />
           </div>
-    
+
           <div class="form-group">
-              <label for="tipoAlojamiento">Tipo de alojamiento</label>
-              <select (change)=cambiar() [(ngModel)]="this.tipo" name="combo" id="combo" ng-model="listItems"
-                formControlName="tipo" class="form-control">
-                <option value="Hotel">Hotel</option>
-                <option value="Casa">Casa</option>
-                <option value="Albergue">Albergue</option>
-                <option value="Camping">Camping</option>
-                <option value="Apartahotel">Apartahotel</option>
-                <option value="Crucero">Crucero</option>
-                <option value="Motel">Motel</option>
-                <option value="Apartamento">Apartamento</option>
+              <label for="tipoalojamiento">Tipo de alojamiento</label>
+              <select (change)=cambiar() [(ngModel)]="this.tipoAlojamiento" name="tipoalojamiento" id="tipoalojamiento" ng-model="listItems"
+                formControlName="tipoalojamiento" class="form-control">
+                <option value="HOTEL">Hotel</option>
+                <option value="CASA">Casa</option>
+                <option value="CAMPING">Camping</option>
+                <option value="MOTEL">Motel</option>
               </select>
           </div>
-    
+
           <div class="form-group">
-            <label for="numeroHabitaciones">Número de habitaciones</label>
-            <input type="number" formControlName="cantidadplatos" class="form-control"
-              [ngClass]="{ 'is-invalid': submitted && f.cantidadplatos.errors }" />
+            <label for="numerohabitaciones">Número de habitaciones</label>
+            <input type="number" formControlName="numerohabitaciones" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.numerohabitaciones.errors }" />
           </div>
 
           <div class="form-group">
-              <label for="numeroBaños">Número de baños</label>
-              <input type="number" formControlName="cantidadplatos" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f.cantidadplatos.errors }" />
+              <label for="numerobanos">Número de baños</label>
+              <input type="number" formControlName="numerobanos" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.numerobanos.errors }" />
           </div>
 
           <div class="form-group">
-              <label for="servicioLimpieza">Servicio de limpieza</label>
-              <select (change)=cambiar() [(ngModel)]="this.tipo" name="combo" id="combo" ng-model="listItems"
-                formControlName="tipo" class="form-control">
+              <label for="serviciolimpieza">Servicio de limpieza</label>
+              <select (change)=cambiar() [(ngModel)]="this.serviciolimpieza" name="serviciolimpieza" id="serviciolimpieza" ng-model="listItems"
+                formControlName="serviciolimpieza" class="form-control">
                 <option value="Si">Sí</option>
                 <option value="No">No</option>
               </select>
           </div>
 
           <div class="form-group">
-              <label for="servicioWifi">Servicio de Wi-Fi</label>
-              <select (change)=cambiar() [(ngModel)]="this.tipo" name="combo" id="combo" ng-model="listItems"
-                formControlName="tipo" class="form-control">
+              <label for="serviciowifi">Servicio de Wi-Fi</label>
+              <select (change)=cambiar() [(ngModel)]="this.serviciowifi" name="serviciowifi" id="serviciowifi" ng-model="listItems"
+                formControlName="serviciowifi" class="form-control">
                 <option value="Si">Sí</option>
                 <option value="No">No</option>
               </select>
           </div>
     </div>
 
-    <div *ngIf="this.tipo == 'Transporte'">
+    <div *ngIf="this.tipoServicio == 'Transporte'">
+        <br>
         <div class="form-group">
             <label for="numeropersonas">Número de personas</label>
             <input type="number" formControlName="numeropersonas" class="form-control"
               [ngClass]="{ 'is-invalid': submitted && f.numeropersonas.errors }" />
           </div>
-    
-          <div class="form-group">
-              <label for="tipoTransporte">Tipo de transporte</label>
-              <select (change)=cambiar() [(ngModel)]="this.tipo" name="combo" id="combo" ng-model="listItems"
-                formControlName="tipo" class="form-control">
-                <option value="Terrestre">Terrestre</option>
-                <option value="Aereo">Aéreo</option>
-                <option value="Maritimo">Marítimo</option>
+
+        <div class="form-group">
+            <label for="empresa">Empresa</label>
+            <input type="text" formControlName="empresa" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.empresa.errors }" />
+        </div>
+
+        <div class="form-group">
+              <label for="tipotransporte">Tipo de transporte</label>
+              <select (change)=cambiar() [(ngModel)]="this.tipoTransporte" name="tipotransporte" id="tipotransporte" ng-model="listItems"
+                formControlName="tipotransporte" class="form-control">
+                <option value="TERRESTRE">Terrestre</option>
+                <option value="AEREO">Aéreo</option>
+                <option value="MARITIMO">Marítimo</option>
               </select>
           </div>
-    
+
           <div class="form-group">
               <label for="origen">Origen</label>
               <input type="text" formControlName="origen" class="form-control"
@@ -169,15 +172,15 @@
           </div>
 
           <div class="form-group">
-              <label for="horainicio">Hora llegada</label>
-              <input type="time" formControlName="horainicio" class="form-control"
-                [ngClass]="{ 'is-invalid': submitted && f.horainicio.errors }" />
+              <label for="horafin">Hora Fin</label>
+              <input type="time" formControlName="horafin" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.horafin.errors }" />
           </div>
 
-          
+
     </div>
 
-    <div *ngIf="this.tipo == 'PaseoEcologico'">
+    <div *ngIf="this.tipoServicio == 'PaseoEcologico'">
       <div class="form-group">
         <label for="numeropersonas">Número de personas</label>
         <input type="text" formControlName="numeropersonas" class="form-control"
